# CVisionary

./: .gitignore  README.md  package-lock.json
AI_Services/: .env.example  .gitignore  README.md  pyproject.toml
AI_Services/embedding_service/: Dockerfile  README.md  __init__.py  app.py  chunking.py  db.py  faiss_index.py  model.py  requirements.txt  schemas.py
AI_Services/embedding_service/tests/: conftest.py  test_app.py  test_chunking.py  test_db.py  test_faiss_index.py  test_model.py  test_schemas.py  test_shemas.py
AI_Services/generator_service/: Dockerfile  README.md  app.py  llm_client.py  prompt_templates.py  requirements.txt  schemas.py  utils.py
AI_Services/generator_service/tests/: conftest.py  test_app.py  test_llm_client.py  test_prompt_templates.py  test_schemas.py  test_utils.py
AI_Services/orchestrator/: .env.example  Dockerfile  README.md  agent.py  app.py  memory.py  requirements.txt  schemas.py  tools.py
AI_Services/orchestrator/tests/: conftest.py  test_agent.py  test_app.py  test_memory.py  test_tools_formatting.py  test_tools_integration.py
AI_Services/retrieval_service/: Dockerfile  README.md  app.py  requirements.txt  schemas.py  utils.py
AI_Services/retrieval_service/tests/: conftest.py  test_app.py  test_schemas.py  test_utils.py
AI_Services/scoring__service/: requirements.txt  suggestion_client.py
AI_Services/scoring_service/: Dockerfile  README.md  app.py  feature_extractor.py  model_inference.py  requirements.txt  schemas.py  suggestion_client.py
AI_Services/scoring_service/tests/: conftest.py  test_app.py  (+4 more)
(+65 files in other folders)
